--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,5 +22,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm ci
+      - name: Set up XVFB
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
       - name: Run tests
-        run: npm run test
+        run: |
+          xvfb-run --auto-servernum npm run test
