--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vscode": "^1.85.0"
   },
   "categories": [
-    "Programming Languages", "Linters"
+    "Programming Languages", "Linters", "Other"
   ],
   "repository": {
     "type": "git",
