--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "color": "#FAFAFA",
     "theme": "light"
   },
-  "version": "0.0.2",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.85.0"
   },
   "categories": [
     "Programming Languages", "Linters", "Other"
+  ],
+  "keywords": [
+    "soos", "sca", "security", "code", "scan", "dependency", "vulnerability", "analysis", "software", "composition", "analysis"
   ],
   "pricing": "Free",
   "repository": {
