more build items

--- a/package.json
+++ b/package.json
@@ -138,10 +138,11 @@
     "lint:fix": "npm run lint -- --fix",
     "typecheck": "tsc --noEmit",
     "test": "vscode-test",
-    "check": "npm run format && npm run lint && npm run typecheck && npm run compile && npm run test && npm outdated",
     "vscode:prepublish": "npm run check",
-    "publish:pre-release": "vsce publish --pre-release",
-    "publish:release": "vsce publish",
+    "publish:check": "npm run format && npm run lint && npm run typecheck && npm run compile",
+    "publish:pre-release": "vsce publish --pre-release -p $PAT",
+    "publish:release": "vsce publish -p $PAT",
+    "check": "npm run publish:check && npm run test && npm outdated",
     "link:soos-api-client": "npm link @soos-io/api-client",
     "patch-api-client": "npm version patch --no-git-tag-version && npm run setup:clean && npm install @soos-io/api-client@latest --save-exact && npm install && npm run check"
   },
