--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "theme": "light"
   },
   "//": "NOTE: use major.EVEN_NUMBER.patch for release versions and major.ODD_NUMBER.patch for pre-release versions.",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "engines": {
     "vscode": "^1.86.0"
   },
@@ -124,19 +124,22 @@
     "setup:clean-install": "npm ci",
     "setup:update": "npx npm-check -u",
     "setup:clean": "npx rimraf node_modules && npx rimraf package-lock.json",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
+    "esbuild-base": "rimraf out && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "format": "prettier ./src --check",
     "format:fix": "prettier ./src --write",
     "lint": "eslint src --cache --ext ts --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
     "typecheck": "tsc --noEmit",
-    "test": "vscode-test",
+    "test:compile": "tsc -p ./",
+    "test:run": "vscode-test",
     "vscode:prepublish": "npm run publish:check",
-    "publish:check": "npm run format && npm run lint && npm run typecheck && npm run compile",
-    "publish:pre-release": "vsce publish --pre-release -p $PAT",
-    "publish:release": "vsce publish -p $PAT",
-    "check": "npm run publish:check && npm run test && npm outdated",
+    "publish:check": "npm run format && npm run lint && npm run typecheck && npm run esbuild-base",
+    "package": "rimraf *.vsix && npm run publish:check && npx vsce package",
+    "publish:pre-release": "npx vsce publish --pre-release -p $PAT",
+    "publish:release": "npx vsce publish -p $PAT",
+    "check": "npm run publish:check && npm run test:compile && npm run test:run && npm outdated",
     "link:soos-api-client": "npm link @soos-io/api-client",
     "patch": "npm version patch --no-git-tag-version",
     "patch-api-client": "npm run patch && npm run setup:clean && npm install @soos-io/api-client@latest --save-exact && npm install && npm run check"
@@ -152,6 +155,7 @@
     "@vscode/test-cli": "^0.0.6",
     "@vscode/test-electron": "^2.3.9",
     "@vscode/vsce": "^2.23.0",
+    "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
     "prettier": "^3.2.5",
     "sinon": "^17.0.1",
