--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "theme": "light"
   },
   "//": "NOTE: use major.EVEN_NUMBER.patch for release versions and major.ODD_NUMBER.patch for pre-release versions.",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "engines": {
     "vscode": "^1.86.0"
   },
@@ -162,7 +162,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@soos-io/api-client": "^0.2.39",
+    "@soos-io/api-client": "0.2.41",
     "@soos-io/soos-sca": "^2.0.23",
     "argparse": "^2.0.1",
     "glob": "^10.3.10"
