--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "theme": "light"
   },
   "//": "NOTE: use major.EVEN_NUMBER.patch for release versions and major.ODD_NUMBER.patch for pre-release versions.",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "engines": {
     "vscode": "^1.86.0"
   },
@@ -139,30 +139,30 @@
     "package": "rimraf *.vsix && npm run publish:check && npx vsce package",
     "publish:pre-release": "npx vsce publish --pre-release -p $PAT",
     "publish:release": "npx vsce publish -p $PAT",
-    "check": "npm run publish:check && npm run test:compile && npm run test:run && npm outdated",
+    "check": "npm run publish:check && npm run test:compile && npm outdated",
     "link:soos-api-client": "npm link @soos-io/api-client",
     "patch": "npm version patch --no-git-tag-version",
     "patch-api-client": "npm run patch && npm run setup:clean && npm install @soos-io/api-client@latest --save-exact && npm install && npm run check"
   },
   "devDependencies": {
-    "@types/argparse": "^2.0.14",
+    "@types/argparse": "^2.0.15",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.11.28",
     "@types/sinon": "^17.0.3",
     "@types/vscode": "^1.86.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "@vscode/test-cli": "^0.0.6",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vscode/test-cli": "^0.0.8",
     "@vscode/test-electron": "^2.3.9",
     "@vscode/vsce": "^2.23.0",
-    "esbuild": "^0.20.1",
+    "esbuild": "^0.20.2",
     "eslint": "^8.56.0",
     "prettier": "^3.2.5",
     "sinon": "^17.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   },
   "dependencies": {
-    "@soos-io/api-client": "0.2.41",
+    "@soos-io/api-client": "0.2.44",
     "@soos-io/soos-sca": "^2.0.23",
     "argparse": "^2.0.1",
     "glob": "^10.3.10"
