--- a/package.json
+++ b/package.json
@@ -158,13 +158,16 @@
     "esbuild": "^0.20.2",
     "eslint": "^8.56.0",
     "prettier": "^3.2.5",
-    "sinon": "^17.0.1",
+    "sinon": "^17.0.2",
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "@soos-io/api-client": "0.2.47",
+    "@soos-io/api-client": "0.2.48",
     "@soos-io/soos-sca": "^2.0.23",
     "argparse": "^2.0.1",
-    "glob": "^10.3.10"
+    "glob": "^10.4.1"
+  },
+  "overrides": {
+    "glob": "^10.4.1"
   }
 }
