--- a/package.json
+++ b/package.json
@@ -139,7 +139,8 @@
     "package": "rimraf *.vsix && npm run publish:check && npx vsce package",
     "publish:pre-release": "npx vsce publish --pre-release -p $PAT",
     "publish:release": "npx vsce publish -p $PAT",
-    "check": "npm run publish:check && npm run test:compile && npm outdated",
+    "check": "npm run publish:check && npm run test:compile",
+    "check:local": "npm run publish:check && npm run test:compile && npm run test:run && npm outdated",
     "link:soos-api-client": "npm link @soos-io/api-client",
     "patch": "npm version patch --no-git-tag-version",
     "patch-api-client": "npm run patch && npm run setup:clean && npm install @soos-io/api-client@latest --save-exact && npm install && npm run check"
@@ -152,10 +153,10 @@
     "@types/vscode": "^1.86.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "@vscode/test-cli": "^0.0.8",
+    "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.3.9",
     "@vscode/vsce": "^2.23.0",
-    "esbuild": "^0.20.2",
+    "esbuild": "^0.21.4",
     "eslint": "^8.56.0",
     "prettier": "^3.3.0",
     "sinon": "^18.0.0",
