--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "theme": "light"
   },
   "//": "NOTE: use major.EVEN_NUMBER.patch for release versions and major.ODD_NUMBER.patch for pre-release versions.",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "engines": {
     "vscode": "^1.86.0"
   },
@@ -79,7 +79,8 @@
               "Php",
               "Python",
               "Ruby",
-              "Rust"
+              "Rust",
+              "Unity"
             ]
           },
           "uniqueItems": true,
