--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "theme": "light"
   },
   "//": "NOTE: use major.EVEN_NUMBER.patch for release versions and major.ODD_NUMBER.patch for pre-release versions.",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "engines": {
     "vscode": "^1.86.0"
   },
@@ -162,13 +162,13 @@
   "devDependencies": {
     "@types/argparse": "^2.0.15",
     "@types/mocha": "^10.0.7",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "@types/sinon": "^17.0.3",
-    "@types/vscode": "^1.86.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.3.9",
+    "@types/vscode": "^1.91.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@vscode/test-cli": "^0.0.10",
+    "@vscode/test-electron": "^2.4.1",
     "@vscode/vsce": "^2.29.0",
     "esbuild": "^0.23.0",
     "eslint": "^8.56.0",
@@ -178,8 +178,8 @@
   },
   "dependencies": {
     "@soos-io/api-client": "0.3.2",
-    "@soos-io/soos-sca": "2.0.28",
+    "@soos-io/soos-sca": "^3.0.4",
     "argparse": "^2.0.1",
-    "glob": "^10.4.2"
+    "glob": "^10.4.5"
   }
 }
