--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "Node16",
+    "module": "es2022",
     "target": "ES2022",
     "outDir": "out",
     "lib": ["ES2022"],
@@ -17,6 +17,7 @@
     "skipLibCheck": false /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "declaration": true /* Generates corresponding '.d.ts' file. */,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "moduleResolution": "node"
   }
 }
