--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "soos-sca-scan",
   "displayName": "SOOS SCA Scan",
   "description": "The SOOS SCA Scan Visual Studio Code Extension",
+  "type":"module",
   "icon": "SOOS.png",
   "publisher": "SOOS",
   "galleryBanner": {
@@ -9,7 +10,7 @@
     "theme": "light"
   },
   "//": "NOTE: use major.EVEN_NUMBER.patch for release versions and major.ODD_NUMBER.patch for pre-release versions.",
-  "version": "0.4.20",
+  "version": "0.4.21",
   "engines": {
     "vscode": "^1.95.0"
   },
@@ -138,13 +139,13 @@
     "setup:clean-install": "npm ci",
     "setup:update": "npx npm-check -u",
     "setup:clean": "npx rimraf node_modules && npx rimraf package-lock.json",
-    "esbuild-base": "rimraf out && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
+    "esbuild-base": "npx rimraf out && esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "format": "prettier ./src --check",
     "format:fix": "prettier ./src --write",
-    "lint": "eslint src --cache --ext ts --max-warnings 0",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "eslint --max-warnings 0",
+    "lint:fix": "eslint --max-warnings 0 --fix",
     "typecheck": "tsc --noEmit",
     "test:compile": "tsc -p ./",
     "test:run": "vscode-test",
@@ -165,19 +166,20 @@
     "@types/node": "^20.14.15",
     "@types/sinon": "^17.0.3",
     "@types/vscode": "^1.95.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "@vscode/vsce": "^3.1.0",
-    "esbuild": "^0.24.0",
-    "eslint": "^8.56.0",
+    "esbuild": "^0.25.0",
+    "eslint": "^9.20.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.4.2",
     "sinon": "^19.0.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@soos-io/api-client": "1.1.8",
+    "@soos-io/api-client": "1.1.9",
     "argparse": "^2.0.1",
     "glob": "^11.0.1"
   }
