--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "module": "es2022",
-    "target": "ES2022",
+    "module": "CommonJS",
+    "target": "ES2024",
     "outDir": "out",
-    "lib": ["ES2022"],
+    "lib": ["ES2024"],
     "sourceMap": true,
     "rootDir": "src",
     "removeComments": true /* Do not emit comments to output. */,
