--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "format": "prettier ./src --check",
     "format:fix": "prettier ./src --write",
+    "knip": "knip",
     "lint": "eslint --max-warnings 0",
     "lint:fix": "eslint --max-warnings 0 --fix",
     "typecheck": "tsc --noEmit",
@@ -173,6 +174,7 @@
     "esbuild": "^0.25.0",
     "eslint": "^9.20.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "knip": "^5.44.2",
     "mocha": "^11.1.0",
     "prettier": "^3.4.2",
     "sinon": "^19.0.2",
