--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
-    "soos-sca-scan.projectName": "soos-ide-vscode-sca"
+    "soos-sca-scan.projectName": "soos-ide-vscode-sca",
+    "cSpell.words": [
+        "soos"
+    ]
 }
