--- a/package.json
+++ b/package.json
@@ -162,11 +162,10 @@
     "patch-api-client": "npm run patch && npm run setup:clean && npm install @soos-io/api-client@latest --save-exact && npm install && npm run check"
   },
   "devDependencies": {
-    "@types/argparse": "^2.0.17",
     "@types/node": "^20.14.15",
     "@types/sinon": "^17.0.3",
     "@types/vscode": "^1.95.0",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.24.1",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
@@ -181,9 +180,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@soos-io/api-client": "1.3.0",
-    "argparse": "^2.0.1",
-    "glob": "^11.0.1"
+    "@soos-io/api-client": "1.3.1"
   },
   "overrides": {
     "mocha": "^11.1.0"
