--- a/package.json
+++ b/package.json
@@ -180,11 +180,12 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@soos-io/api-client": "1.5.5"
+    "@soos-io/api-client": "1.5.5",
+    "brace-expansion": "2.0.0"
   },
   "overrides": {
     "glob": "^11.0.2",
-    "brace-expansion": "2.0.1",
+    "brace-expansion": "2.0.0",
     "mocha": "^11.1.0"
   }
 }
