--- a/package.json
+++ b/package.json
@@ -180,12 +180,9 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@soos-io/api-client": "1.5.5",
-    "brace-expansion": "2.0.0"
+    "@soos-io/api-client": "1.5.7"
   },
   "overrides": {
-    "glob": "^11.0.2",
-    "brace-expansion": "2.0.0",
     "mocha": "^11.1.0"
   }
 }
