--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "theme": "light"
   },
   "//": "NOTE: use major.EVEN_NUMBER.patch for release versions and major.ODD_NUMBER.patch for pre-release versions.",
-  "version": "0.4.42",
+  "version": "0.4.43",
   "engines": {
     "vscode": "^1.102.1"
   },
@@ -61,7 +61,8 @@
         },
         "soos-sca-scan.filesToExclude": {
           "type": "array",
-          "markdownDescription": "Listing of files or patterns patterns to exclude from the search for manifest files. eg: **/req**.txt/, **/requirements.txt"
+          "markdownDescription": "Listing of files or patterns patterns to exclude from the search for manifest files. eg: **/req**.txt/, **/requirements.txt",
+          "default": []
         },
         "soos-sca-scan.packageManagers": {
           "type": "array",
@@ -180,7 +181,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@soos-io/api-client": "1.7.6"
+    "@soos-io/api-client": "1.8.0"
   },
   "overrides": {
     "mocha": "^11.1.0"
