--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "resolveJsonModule": true,
     "moduleResolution": "node"
-  }
+  },
+  "exclude": [
+    ".vscode-test"
+  ]
 }
